fix: recruit search bar layout broken after design system migration

--- a/src/widgets/recruit/main/header/style.module.scss
+++ b/src/widgets/recruit/main/header/style.module.scss
@@ -39,3 +39,12 @@
   width: 100%;
 }
 
+.recruit_search_field {
+  flex: 1 1 200px;
+  min-width: 0;
+}
+
+.recruit_search_select {
+  width: auto;
+}
+
